2025-12-03T12:34:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19893991090 # 1343
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: last 14d: unq all: 48 92
* notice: prev accum: outdated-unq outdated-all / unq all: 5074 10065 / 5120 10125
* notice: next accum: outdated-unq outdated-all / unq all: 5074 10065 / 5130 10159
* notice: prev exec diff / last date diff / accum: unq all: +10 +34 -2 -2 / +10 +34 -0 -0 / 10 34
* notice: removed / changed dates: [] / [2025-11-19 2025-12-03]

2025-12-03T01:13:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19878935189 # 1342
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: last 14d: unq all: 39 60
* notice: prev accum: outdated-unq outdated-all / unq all: 5074 10065 / 5119 10124
* notice: next accum: outdated-unq outdated-all / unq all: 5074 10065 / 5120 10125
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2025-12-02]

2025-12-02T12:34:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19858753562 # 1341
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
* notice: last 14d: unq all: 38 59
* notice: prev accum: outdated-unq outdated-all / unq all: 5074 10065 / 5117 10121
* notice: next accum: outdated-unq outdated-all / unq all: 5074 10065 / 5119 10124
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-12-02]

2025-12-02T01:13:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19843224142 # 1340