@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-03T12:34:04Z",
-  "count_outdated" : 10065,
-  "uniques_outdated" : 5074,
-  "count" : 10159,
-  "uniques" : 5130,
+  "timestamp" : "2025-12-04T01:13:53Z",
+  "count_outdated" : 10069,
+  "uniques_outdated" : 5077,
+  "count" : 10162,
+  "uniques" : 5132,
   "clones" : [
-    {
-      "timestamp": "2025-11-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 2, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2025-11-21T00:00:00Z",
       "count": 11,
@@ -88,12 +79,12 @@
     },
     {
       "timestamp": "2025-12-03T00:00:00Z",
-      "count": 34,
-      "count_minmax": [ 34, 34 ],
-      "count_decinc": [ 0, 34 ],
-      "uniques": 10,
-      "uniques_minmax": [ 10, 10 ],
-      "uniques_decinc": [ 0, 10 ]
+      "count": 37,
+      "count_minmax": [ 34, 37 ],
+      "count_decinc": [ 0, 37 ],
+      "uniques": 12,
+      "uniques_minmax": [ 10, 12 ],
+      "uniques_decinc": [ 0, 12 ]
     }
   ]
 }
