@@ -1,12 +1,7 @@
 {
-  "count": 92,
-  "uniques": 48,
+  "count": 93,
+  "uniques": 49,
   "clones": [
-    {
-      "timestamp": "2025-11-19T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-11-21T00:00:00Z",
       "count": 11,
@@ -49,8 +44,8 @@
     },
     {
       "timestamp": "2025-12-03T00:00:00Z",
-      "count": 34,
-      "uniques": 10
+      "count": 37,
+      "uniques": 12
     }
   ]
 }
