@@ -1,3 +1,12 @@
+2025-12-04T01:13:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19914291341 # 1344
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-04
+* notice: last 14d: unq all: 49 93
+* notice: prev accum: outdated-unq outdated-all / unq all: 5074 10065 / 5130 10159
+* notice: next accum: outdated-unq outdated-all / unq all: 5077 10069 / 5132 10162
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +12 +37 -0 -0 / 12 37
+* notice: removed / changed dates: [2025-11-19] / [2025-12-03]
+
 2025-12-03T12:34:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19893991090 # 1343
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
